--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -10,28 +10,60 @@
 <body>
 	<h1>Jersey GAE Test</h1>
 
-	<table>
-		<tr>
-			<td colspan="2" style="font-weight: bold;">Available Servlets:</td>
-		</tr>
-		<tr>
-			<td><a href='/test'>The test servlet</a></td>
-		</tr>
-		<tr>
-			<td><a href='/jersey/test'>The jersey servlet</a></td>
-		</tr>
-		<tr>
-			<td><a href='/jersey/test2'>The jersey servlet #2</a></td>
-		</tr>
-		<tr>
-			<td><a href='/jersey/test.jsp'>The jersey JSP page</a></td>
-		</tr>
-		<tr>
-			<td><a href='/jersey/test2.jsp'>The jersey JSP page #2</a></td>
-		</tr>
-		<tr>
-			<td><a href='/jersey/securedtest.jsp'>The jersey JSP secured page #1</a></td>
-		</tr>
-	</table>
+	<fieldset>
+		<legend>Servlet Tests</legend>
+		<table>
+			<tr>
+				<td colspan="2" style="font-weight: bold;">Available Servlets:</td>
+			</tr>
+			<tr>
+				<td><a href='/test'>The test servlet</a></td>
+			</tr>
+			<tr>
+				<td><a href='/jersey/test'>The jersey servlet</a></td>
+			</tr>
+			<tr>
+				<td><a href='/jersey/test2'>The jersey servlet #2</a></td>
+			</tr>
+			<tr>
+				<td><a href='/jersey/test.jsp'>The jersey JSP page</a></td>
+			</tr>
+			<tr>
+				<td><a href='/jersey/test2.jsp'>The jersey JSP page #2</a></td>
+			</tr>
+			<tr>
+				<td><a href='/jersey/securedtest.jsp'>The jersey JSP
+						secured page #1</a></td>
+			</tr>
+		</table>
+	</fieldset>
+
+	<hr />
+	<fieldset>
+		<legend>Email Tests</legend>
+		<table>
+			<tr>
+				<td colspan="2" style="font-weight: bold;">Available Servlets:</td>
+			</tr>
+			<tr>
+				<td><a href='/jersey/email/plain'>Test Plain Text Email
+						(Works)</a></td>
+			</tr>
+			<tr>
+				<td><a href='/jersey/email/html'>Test Simple HTML Email
+						(Works)</a></td>
+			</tr>
+			<tr>
+				<td><a href='/jersey/email/multipart'>Test HTML Email with
+						alternative plaintext "fallback" works
+				</a></td>
+			</tr>
+			<tr>
+				<td><a href='/jersey/email/attachment'>Test HTML Email with attachment and
+						alternative plaintext "fallback" <span style="color: red">(FAILS)</span>
+				</a></td>
+			</tr>			
+		</table>
+	</fieldset>
 </body>
 </html>
